--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PASSWORD=Boodis
 DATABASE_USER=root
 DATABASE_HOST=localhost
-DATABASE_NAME=testing
+DATABASE_NAME=gruppuppgiftDB1
 DATABASE_PORT=3306
