--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts":{
+    "devstart": "node --watch ./server/src/index.js"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
