--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "scripts":{
+  "scripts": {
     "devstart": "node --watch ./server/src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.8.3",
